[workspace]
members = ["chain/zcash", "zypher/*", "programs/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
network = { path = "zypher/network", package = "zypher-network" }
node = { path = "zypher/node", package = "zypher-node" }
runtime = { path = "zypher/runtime", package = "zypher-runtime" }
sync = { path = "zypher/sync", package = "zypher-sync" }
zcore = { path = "zypher/core", package = "zypher-core" }
zcash = { path = "chain/zcash", package = "zyphers-zcash" }
solana = { path = "chain/solana", package = "zyphers-solana" }

# crates-io dependencies
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
borsh = "1.5.7"
bs58 = "0.5.1"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
frost-core = "2.2.0"
hex = "0.4.3"
jsonrpsee-http-client = "0.26.0"
mollusk-svm = "~0.4"
orchard = { version = "0.10.1", default-features = false, features = [
    "unstable-frost",
] }
postcard = "1.1.3"
proptest = "=1.6.0"
prost = "^0.13"
rand = "0.8.5"
rand_core = "0.6.4"
reddsa = { version = "0.5.1", features = ["frost", "serde"] }
rusqlite = "0.32.0"
secp256k1 = "0.31.1"
serde = "1.0.228"
serde_json = "1.0.145"
solana-program = "2.2.0"
solana-sdk = { version = "2.2.0", features = ["full"] }
solana-sdk-ids = "^2"
solana-signer = "2.2.0"
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
tokio = "1.48.0"
toml = "0.9.8"
tonic = "^0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
zcash_address = "0.6.2"
zcash_client_backend = { version = "0.16.0", features = [
    "lightwalletd-tonic",
    "orchard",
    "sync",
] }
zcash_client_sqlite = { version = "0.14.0", features = ["orchard"] }
zcash_keys = { version = "0.6.0", features = ["orchard", "unstable-frost"] }
zcash_primitives = "0.21.0"
zcash_protocol = "0.4.3"
zcash_proofs = "0.26.1"
zcash-sign = { git = "https://github.com/ZcashFoundation/frost-tools.git", rev = "836b936e5aba8d63f74300aefd38eba8c94974c8" }
zebra-chain = "3.0.1"
zebra-rpc = { version = "3.1.0", default-features = false }


[patch.crates-io]
orchard = { git = "https://github.com/conradoplg/orchard.git", rev = "f0c88b78a1d70d55ce6bb480566d132e57d5607b" }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead" }
