[workspace]
members = ["zorch/*", "programs/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
network = { path = "zorch/network", package = "zorch-network" }
node = { path = "zorch/node", package = "zorch-node" }
runtime = { path = "zorch/runtime", package = "zorch-runtime" }
sync = { path = "zorch/sync", package = "zorch-sync" }
zcore = { path = "zorch/core", package = "zorch-core" }
solana = { path = "chain/solana", package = "zorch-solana" }
zorch = { path = "programs/zorch", package = "zorch-program" }

# crates-io dependencies
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
borsh = "1.5.7"
bs58 = "0.5.1"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
frost-core = "2.2.0"
hex = "0.4.3"
jsonrpsee-http-client = "0.26.0"
mpl-token-metadata = { version = "5.0.0", features = ["serde"] }
orchard = { version = "0.11.0", default-features = false, features = [
    "unstable-frost",
] }
postcard = "1.1.3"
proptest = "=1.6.0"
prost = "0.14.1"
rand = "0.8.5"
rand_core = "0.6.4"
reddsa = { version = "0.5.1", features = ["frost", "serde"] }
rusqlite = "0.37.0"
serde = "1.0.228"
solana-account = "2.2.1"
solana-client = "2.3.13"
solana-ed25519-program = "2.2.3"
solana-program = "2.2.1"
solana-sdk = { version = "2.2.1", features = ["full"] }
solana-sdk-ids = "^2"
solana-signer = "2.2.1"
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
tokio = "1.48.0"
toml = "0.9.8"
tonic = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
zcash_client_backend = { version = "0.21.0", features = [
    "lightwalletd-tonic",
    "orchard",
    "sync",
] }
zcash_client_sqlite = { version = "0.19.0", features = ["orchard"] }
zcash_keys = { version = "0.12.0", features = ["orchard", "unstable-frost"] }
zcash_primitives = "0.26.1"
zcash_protocol = "0.7.1"
zcash_proofs = "0.26.1"

[patch.crates-io]
orchard = { git = "https://github.com/clearloop/orchard.git", branch = "main" }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git" }
halo2_gadgets = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
halo2_proofs = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
halo2_poseidon = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
