[package]
name = "ui"
version.workspace = true
edition.workspace = true
description = "Zosh UI backend"

[[bin]]
name = "zosh-ui"
path = "src/main.rs"

[dependencies]
dirs.workspace = true
rpc.workspace = true
sync.workspace = true
zcore.workspace = true

# crates-io dependencies
anyhow.workspace = true
axum.workspace = true
bs58.workspace = true
futures-util.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = ["client", "ws-client"] }
postcard.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
