[package]
name = "zorch-solana"
version.workspace = true
edition.workspace = true

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anyhow.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
mpl-token-metadata.workspace = true

# Zorch program types
zorch = { path = "../../programs/zorch" }
