[package]
name = "zyphers-zcash"
version.workspace = true
edition.workspace = true
description = "Zcash related stuffs for zyphers"

[dependencies]
anyhow.workspace = true
orchard.workspace = true
rand.workspace = true
rand_core.workspace = true
reddsa.workspace = true
jsonrpsee-http-client.workspace = true
serde.workspace = true
tracing.workspace = true
zcash_keys.workspace = true
zcash_primitives.workspace = true
zcash_protocol.workspace = true
