[package]
name = "zorch"
version.workspace = true
edition.workspace = true
description = "Zorch solana consensus program"

[lib]
crate-type = ["cdylib", "lib"]
name = "zorch"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
anyhow.workspace = true
solana-sdk-ids.workspace = true
mpl-token-metadata.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
anyhow.workspace = true
solana-sdk.workspace = true

[dev-dependencies]
borsh.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
