[package]
name = "zyphers"
version.workspace = true
edition.workspace = true
description = "Zyphers solana consensus program"

[lib]
crate-type = ["cdylib", "lib"]
name = "zyphers"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
anyhow.workspace = true
solana-sdk-ids.workspace = true

[dev-dependencies]
borsh.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
