[package]
name = "zorch-sync"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
orchard.workspace = true
prost.workspace = true
rand.workspace = true
rand_core.workspace = true
reddsa.workspace = true
serde.workspace = true
solana-sdk.workspace = true
rusqlite.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
zcash_client_backend.workspace = true
zcash_client_sqlite.workspace = true
zcash_keys.workspace = true
zcash_primitives.workspace = true
zcash_protocol.workspace = true
