[package]
name = "zosh-node"
version.workspace = true
edition.workspace = true

[dependencies]
sync.workspace = true

# crates-io dependencies
anyhow.workspace = true
async-trait.workspace = true
bs58.workspace = true
clap.workspace = true
crypto.workspace = true
dirs.workspace = true
hex.workspace = true
parity-db.workspace = true
postcard.workspace = true
rand_core.workspace = true
reddsa.workspace = true
runtime.workspace = true
serde.workspace = true
shadow-rs.workspace = true
solana-signer.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
zcore.workspace = true

# optional dependencies
zoshui = { workspace = true, optional = true }
rpc = { workspace = true, optional = true }

[build-dependencies]
shadow-rs.workspace = true

[features]
default = ["ui"]
ui = ["zoshui"]
rpc = ["dep:rpc"]
