[package]
name = "zosh-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { workspace = true, features = ["macros"] }
zcore.workspace = true
serde.workspace = true
serde_json.workspace = true

# server dependencies
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["client", "server"]
client = ["jsonrpsee/client"]
server = ["jsonrpsee/server", "tracing", "tokio", "anyhow"]
