[package]
name = "zosh-sync"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bs58.workspace = true
clap.workspace = true
dirs.workspace = true
orchard.workspace = true
postcard.workspace = true
prost.workspace = true
rand.workspace = true
rand_core.workspace = true
reddsa.workspace = true
rusqlite.workspace = true
serde.workspace = true
solana-pubsub-client.workspace = true
solana-rpc-client-types.workspace = true
solana-sdk.workspace = true
toml.workspace = true
tonic.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
zcash_client_backend.workspace = true
zcash_client_sqlite.workspace = true
zcash_keys.workspace = true
zcash_primitives.workspace = true
zcash_protocol.workspace = true
zcore.workspace = true
zosh.workspace = true
