[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bs58.workspace = true
frost-core.workspace = true
jsonrpsee-http-client.workspace = true
postcard.workspace = true
reddsa.workspace = true
serde = { workspace = true, features = ["derive"] }
solana-sdk.workspace = true
tokio.workspace = true
