[package]
name = "zypher-node"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
reddsa.workspace = true
serde.workspace = true
sync.workspace = true
rand_core.workspace = true
runtime.workspace = true
solana-signer.workspace = true
toml.workspace = true
url.workspace = true
