[package]
name = "zypher-node"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
rand_core.workspace = true
reddsa.workspace = true
runtime.workspace = true
serde.workspace = true
sync.workspace = true
solana-signer.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
url.workspace = true
zcash.workspace = true
